GNOME Bugzilla – Bug 679169
Fix aspect frame bugs
Last modified: 2013-03-11 10:41:14 UTC
Most of the bugs in totem-aspect-frame were already solved in MxImage. See mx_image_paint(), calculate_scale() and get_center_coords(). https://github.com/clutter-project/mx/blob/master/mx/mx-image.c Also note that we should never be rotating the frame (the container) but rather the video itself. You can debug this more easily by setting the background color of the video widget to one colour, and the frame background to another.
Created attachment 238379 [details] [review] P Patch from Lionel. - Resizing the window when rotated 90/270 could make the video disappear from view - aspect ratio changes are broken, this call in bvw the culprit in handling "video-size": clutter_actor_set_size (bvw->priv->texture, w, h);
Created attachment 238380 [details] [review] P With a tiny local patch
commit 94a3d2b39b044e2dd68edb7db4f1fe9fccddbb35 Author: Bastien Nocera <hadess@hadess.net> Date: Fri Mar 8 17:32:19 2013 +0100 backend: Simplify angle check https://bugzilla.gnome.org/show_bug.cgi?id=679169 commit 089909347401c0c29c52ca07992efbf8ba7b4fd7 Author: Lionel Landwerlin <llandwerlin@gmail.com> Date: Fri Mar 8 16:03:00 2013 +0000 backend: Make rotation/crop work together This fixes problems with the widget not taking all the available space when rotated, and the expand being broken in rotated mode. https://bugzilla.gnome.org/show_bug.cgi?id=679169 commit 0db2913d5b021688c00a1575b9ed555d56a4fc13 Author: Bastien Nocera <hadess@hadess.net> Date: Fri Mar 8 17:14:04 2013 +0100 Revert "backend: Don't rotate the frame itself" This reverts commit b532b4464cea5db46f060c650d78f2300e4c42a6. The code clashed with Lionel's bug fixes (which also includes fixing the same bug this fixed). https://bugzilla.gnome.org/show_bug.cgi?id=679169