backend: Make rotation/crop work together

This fixes problems with the widget not taking all the
available space when rotated, and the expand being broken
in rotated mode.

https://bugzilla.gnome.org/show_bug.cgi?id=679169